bluetooth: Reject pending getPrimaryService(s) calls when the device disconnects

This was causing getPrimaryService(s) promises to reject.

Bug: 719289
Change-Id: I0860e53778cb6c8d1d69564bcbdd5438052769e8
Reviewed-on: https://chromium-review.googlesource.com/510055
Commit-Queue: Giovanni Ortuño Urquidi <ortuno@chromium.org>
Reviewed-by: Vincent Scheib <scheib@chromium.org>
Cr-Commit-Position: refs/heads/master@{#473430}
Former-commit-id: 8688a0dbe08b343fb8f0b736a506f79953e658e2