third_party/WebKit/LayoutTests/bluetooth/script-tests/server/device-disconnects-during.js
@@ -1,0 +1,18 @@
+FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
+'use strict';
+promise_test(() => {
+  return setBluetoothFakeAdapter('DisconnectingDuringServiceRetrievalAdapter')
+    .then(() => requestDeviceWithKeyDown({
+      filters: [{services: ['heart_rate']}]
+    }))
+    .then(device => device.gatt.connect())
+    .then(gatt => assert_promise_rejects_with_message(
+      gatt.CALLS([
+        getPrimaryService('heart_rate') |
+        getPrimaryServices() |
+        getPrimaryServices('heart_rate')[UUID]]),
+      new DOMException(
+        'GATT Server is disconnected. Cannot retrieve services. ' +
+        '(Re)connect first with `device.gatt.connect`.',
+        'NetworkError')));
+}, 'Device disconnects during FUNCTION_NAME call. Reject with NetworkError.');
